# cognitive-beats

app/: CMakeCache.txt  CMakeLists.txt  build.gradle
app/src/androidTest/java/com/etek/cognitivebeats/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/cpp/cognitive_beats/: CMakeLists.googletest.in  CMakeLists.kfr.in  CMakeLists.txt
app/src/main/cpp/cognitive_beats/src/cognitive_beats/arch/linux/: dllmain_ipp_custom.cpp  stdafx.cpp  stdafx.h
app/src/main/cpp/cognitive_beats/src/cognitive_beats/arch/win/: dllmain_ipp_custom.cpp  stdafx.h
app/src/main/cpp/cognitive_beats/src/cognitive_beats/beat_generation/: CMakeLists.txt  beat_generation.cpp  beat_generation.h  beat_generation_impl.h
app/src/main/cpp/cognitive_beats/src/cognitive_beats/beat_generation_tests/: CMakeLists.txt  beat_generation_tests.cpp  main_tests.cpp
app/src/main/java/com/etek/cognitivebeats/: AudioPlayer.java  BeatConfiguration.java  CognitiveBeats.java  DefaultBeatConfiguration.java  EntrainmentService.java  LibraryActivity.java  MyStimulationRecyclerViewAdapter.java  ProtoConverter.java  StimulationFragment.java
app/src/main/java/com/etek/cognitivebeats/dummy/: DummyContent.java
app/src/main/proto/: BeatConfiguration.proto
app/src/main/res/layout/: activity_library.xml  fragment_stimulation.xml  fragment_stimulation_list.xml
app/src/main/res/values/: dimens.xml  strings.xml
app/src/test/java/com/etek/cognitivebeats/: ExampleUnitTest.java
